namespace Heroes;

public interface IWarrior
{
    public int Power { get; }
}